<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
   

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />
    
    <Button android:id="@+id/button_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_setup_text" />

    <Button android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_settings_text"
        android:onClick="startSettings" />
   
    <Button android:id="@+id/button_tweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_tweet_text" />
    
    <Button android:id="@+id/button_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_debug_text"
        android:onClick="printDebug" />
    
    <Button android:id="@+id/button_compose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_compose_text"
        android:onClick="composeTweet"/>
</LinearLayout>