<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity" >

    <EditText
        android:id="@+id/test_tweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none" />
    
	<Button
        android:id="@+id/use_trail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_use_trail_log"
        android:clickable="false" />
    
    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	    <EditText android:id="@+id/edit_message"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/edit_message" />
	    
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_show_map"
	        android:onClick="readLocationMessage" />
    </LinearLayout>
	
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="nextViewConfirm"
        android:text="@string/test_build_next" />

</LinearLayout>