<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RadioGroup android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <RadioButton android:id="@+id/radiobuttondata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiodata" />
        
        <RadioButton android:id="@+id/radiobuttonsms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiosms" />
            
    </RadioGroup>

    <Button 
            android:id="@+id/buttonsettingssave"    
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/buttonsave" 
        	android:onClick="commitSettings" />
</LinearLayout>