<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity" >

	<!--
    <EditText
        android:id="@+id/test_tweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none" />
    -->
    
    <!-- commented out (Mussie) <TextView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/enter_location_text"
    android:padding="10dp"
    android:gravity="center"
    />
    
    <EditText
        android:id="@+id/location_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/address_hint_text" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:onClick="chooseLocation"
        android:text="@string/current_location_button_text" />
    
    <TextView 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/map_placeholder_text"
    	android:padding="10dp"
    	android:gravity="center"
    /> -->
    
    <TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/enter_location_text"
	    android:padding="5dp"
	    android:gravity="left"
	    android:textSize="20sp"
	    />
    
    <TextView
     	android:id="@+id/char_count"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:textAppearance="?android:attr/textAppearanceSmall" />
    
    
    <EditText
        android:id="@+id/edit_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/address_hint_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="readLocationMessage"
        android:text="@string/button_show_map" />
    
    <TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="OR"
	    android:padding="10dp"
	    android:gravity="center"
    />
    
	<Button
        android:id="@+id/use_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_use_gps_loc"
        android:onClick="showMap" />

	<Button
	    android:id="@+id/button1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:onClick="nextViewCategory"
	    android:text="@string/test_build_next" />

</LinearLayout>